Fix bugs for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
 /* General */
-body {
-    /* padding-top: 70px; */ /* Adjusted for fixed-top navbar - Removed */
-}
-
 .txtcenter {
     text-align: center;
 }
@@ -40,7 +36,7 @@ body {
 }
 
 .c-yellow {
-    color: #D1A730; /* Darkened yellow for better contrast on light backgrounds */
+    color: #D1A730;
 }
 
 .c-white {
@@ -85,22 +81,20 @@ body {
 
 .fw-100 { font-weight: 100; }
 .text-justify { text-align: justify; }
-.text-underlined { /* text-decoration: underline; */ }
 
 h3.text-underlined { text-decoration: underline; }
 
 /* Component Specific */
 .carousel-custom-inner {
     max-height: 350px;
-    padding-top: 10px; /* Note: !important was removed, check if effective */
+    padding-top: 10px;
 }
 
 .aim-scope-column {
     text-align: justify;
-    /* margin-top: 0px !important; was here, will be handled by removing mt-5 in HTML */
 }
 
-.tutorial-speaker-text { /* Replaces multiple inline style="padding-top: 5px;" */
+.tutorial-speaker-text {
     padding-top: 5px;
 }
 
@@ -144,10 +138,6 @@ h3.text-underlined { text-decoration: underline; }
     height: 95px;
 }
 
-/* Contact name color override, if c-yellow is not specific enough or !important was unavoidable */
-/* .contact-name { color: #F8CF5F; } */
-
-
 /* Navbar */
 .navbar-light {
     background-color: #f1f1f1;
@@ -164,10 +154,9 @@ h3.text-underlined { text-decoration: underline; }
 }
 
 /* Slider */
-
 .bg-slider {
     background-color: #292c33;
-    margin-top: 70px; /* Added to compensate for removed body padding-top */
+    margin-top: 55px; /* Added to compensate for removed body padding-top */
 }
 
 /* Logo */
@@ -271,7 +260,7 @@ h3.text-underlined { text-decoration: underline; }
   }
 
   .img-logo-size {
-    width: 85%; 
+    width: 85%;
     height: auto;
   }
 
@@ -284,15 +273,7 @@ h3.text-underlined { text-decoration: underline; }
   }
 
   .main-content-abstract-padding {
-    margin-top: 30px; /* Reduced margin for abstract pages on mobile */
-    margin-bottom: 30px; /* Reduced margin for abstract pages on mobile */
+    margin-top: 100px; /* Reduced margin for abstract pages on mobile */
+    margin-bottom: 100px; /* Reduced margin for abstract pages on mobile */
   }
-
-  /* Adjust hero text size if needed on very small screens */
-  /* Example:
-  .os-2text {
-    font-size: 0.9rem; // Or adjust based on actual inherited size
-    line-height: 1.5;
-  }
-  */
 }
